CI-66-remove spring framework